--- a/about us.html
+++ b/about us.html
@@ -16,7 +16,10 @@
       <nav>
         <ul>
           <li><a href="index.html">HOME</a></li>
-          <li><a href="#"  style="color: red;">ABOUT US</a></li>
+          <li><a href="#"style="border: solid white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: white 5px 5px 5px;">ABOUT US</a></li>
           <li><a href="contact.html" >CONTACT US</a></li>
         </ul>
       </nav>
