--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html" style="color: red;">HOME</a></li>
+        <li><a href="index.html" style="border: solid white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: white 5px 5px 5px;">HOME</a></li>
         <li><a href="about us.html">ABOUT US</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
       </ul>
